docker/kubernetes_flask/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oz-service
spec:
  selector:
    app: oliver-zott-sample #to root to that pod
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
